--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
-    <uses-permission android:name="android.permission.READ_CONTACTS"/>
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.WRITE_CALENDAR" />
     <uses-permission android:name="android.permission.READ_CALENDAR" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
@@ -13,10 +13,8 @@
     <uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-
-    <!-- MAKE ALARMS RESTART ON REBOOT -->
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" /> <!-- MAKE ALARMS RESTART ON REBOOT -->
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <application
         android:allowBackup="true"
@@ -28,6 +26,15 @@
         android:theme="@style/Theme.JABSA"
         tools:targetApi="31">
         <activity
+            android:name=".PantallaBienvenida"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".TareaListActivity"
             android:exported="true">
             <intent-filter>
@@ -35,50 +42,50 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
             <meta-data
                 android:name="android.app.lib_name"
-                android:value=""
-                />
+                android:value="" />
         </activity>
         <activity
             android:name=".TareaPagerActivity"
             android:exported="true"
-            android:parentActivityName=".TareaListActivity"
-            >
-        </activity>
+            android:parentActivityName=".TareaListActivity"></activity>
+
         <provider
-            android:authorities="com.example.jabsa.fileprovider"
             android:name="androidx.core.content.FileProvider"
+            android:authorities="com.example.jabsa.fileprovider"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/files"
-                />
+                android:resource="@xml/files" />
         </provider>
+
         <receiver
-            android:name="com.example.jabsa.alarmNotification.AlarmReceiver"
+            android:name=".alarmNotification.AlarmReceiver"
             android:enabled="true" />
 
         <service
-            android:name="com.example.jabsa.alarmNotification.NotificationService"
-            android:enabled="true" />
-        <!-- MAKE ALARMS RESTART ON REBOOT -->
-        <service android:name="com.example.jabsa.alarmNotification.RebootServiceClass"/>
-        <receiver android:name="com.example.jabsa.alarmNotification.MyRebootReceiver"
+            android:name=".alarmNotification.NotificationService"
+            android:enabled="true" /> <!-- MAKE ALARMS RESTART ON REBOOT -->
+        <service android:name=".alarmNotification.RebootServiceClass" />
+
+        <receiver
+            android:name=".alarmNotification.MyRebootReceiver"
             android:exported="true">
             <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
-        <receiver android:name=".alarmNotification.MyBroadcastReceiver"
+        <receiver
+            android:name=".alarmNotification.MyBroadcastReceiver"
             android:exported="true"
             tools:ignore="Instantiatable">
             <intent-filter>
-                <action android:name="com.example.myapp.MY_ACTION"/>
+                <action android:name="com.example.myapp.MY_ACTION" />
             </intent-filter>
         </receiver>
-
     </application>
 
 </manifest>
